# docs/swagger.json
@@ -782,6 +782,99 @@
                 }
             }
         },
+        "/v1/store/prefs": {
+            "get": {
+                "description": "Get Store Settings List.",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Store"
+                ],
+                "summary": "Store Settings",
+                "responses": {
+                    "200": {
+                        "description": "OK RESPOND",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/domain.StoreSetting"
+                            }
+                        }
+                    },
+                    "401": {
+                        "description": "UNAUTHORIZED RESPOND",
+                        "schema": {
+                            "$ref": "#/definitions/utils.ErrorRespond"
+                        }
+                    },
+                    "500": {
+                        "description": "INTERNAL SERVER ERROR RESPOND",
+                        "schema": {
+                            "$ref": "#/definitions/utils.ErrorRespond"
+                        }
+                    }
+                }
+            },
+            "put": {
+                "description": "Update Floor Data by ID.",
+                "consumes": [
+                    "multipart/form-data"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Store"
+                ],
+                "summary": "Update Floor Data",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "key",
+                        "name": "key",
+                        "in": "formData",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "value",
+                        "name": "value",
+                        "in": "formData",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "CREATED RESPOND",
+                        "schema": {
+                            "$ref": "#/definitions/domain.StoreSetting"
+                        }
+                    },
+                    "401": {
+                        "description": "UNAUTHORIZED RESPOND",
+                        "schema": {
+                            "$ref": "#/definitions/utils.ErrorRespond"
+                        }
+                    },
+                    "422": {
+                        "description": "UNPROCESSABLE ENTITY RESPOND",
+                        "schema": {
+                            "$ref": "#/definitions/utils.ValidationErrorRespond"
+                        }
+                    },
+                    "500": {
+                        "description": "INTERNAL SERVER ERROR RESPOND",
+                        "schema": {
+                            "$ref": "#/definitions/utils.ErrorRespond"
+                        }
+                    }
+                }
+            }
+        },
         "/v1/tables": {
             "post": {
                 "description": "Create new Table.",
@@ -1351,7 +1444,7 @@
             ],
             "properties": {
                 "created_at": {
-                    "$ref": "#/definitions/sql.NullString"
+                    "$ref": "#/definitions/sql.NullInt64"
                 },
                 "id": {
                     "type": "integer"
@@ -1378,7 +1471,7 @@
                     "type": "integer"
                 },
                 "updated_at": {
-                    "$ref": "#/definitions/sql.NullString"
+                    "$ref": "#/definitions/sql.NullInt64"
                 }
             }
         },
@@ -1420,7 +1513,7 @@
                     "type": "integer"
                 },
                 "created_at": {
-                    "$ref": "#/definitions/sql.NullString"
+                    "$ref": "#/definitions/sql.NullInt64"
                 },
                 "floor_id": {
                     "type": "integer"
@@ -1438,7 +1531,7 @@
                     "type": "number"
                 },
                 "updated_at": {
-                    "$ref": "#/definitions/sql.NullString"
+                    "$ref": "#/definitions/sql.NullInt64"
                 },
                 "w_size": {
                     "type": "number"
@@ -1449,6 +1542,12 @@
                 "y_pos": {
                     "type": "number"
                 }
+            }
+        },
+        "domain.StoreSetting": {
+            "type": "object",
+            "additionalProperties": {
+                "type": "string"
             }
         },
         "domain.Table": {
@@ -1467,7 +1566,7 @@
                     "type": "integer"
                 },
                 "created_at": {
-                    "$ref": "#/definitions/sql.NullString"
+                    "$ref": "#/definitions/sql.NullInt64"
                 },
                 "floor_id": {
                     "type": "integer"
@@ -1485,7 +1584,7 @@
                     "type": "string"
                 },
                 "updated_at": {
-                    "$ref": "#/definitions/sql.NullString"
+                    "$ref": "#/definitions/sql.NullInt64"
                 },
                 "w_size": {
                     "type": "number"
@@ -1533,14 +1632,14 @@
                 }
             }
         },
-        "sql.NullString": {
+        "sql.NullInt64": {
             "type": "object",
             "properties": {
-                "string": {
-                    "type": "string"
+                "int64": {
+                    "type": "integer"
                 },
                 "valid": {
-                    "description": "Valid is true if String is not NULL",
+                    "description": "Valid is true if Int64 is not NULL",
                     "type": "boolean"
                 }
             }
